@@ -1,3 +1,12 @@
+Wed, 27 Feb 2008 10:44:48 +0100 <thp@perli.net>
+Notify user about no new episodes when updating from tray icon
+
+	* src/gpodder/gui.py: Patch from Jérôme Chabod
+	<jerome.chabod@ifrance.com> to notify the user about "no new episodes"
+	when updating the feed cache manually via the tray icon
+	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=3)
+	* src/gpodder/trayicon.py: See above
+
 Wed, 27 Feb 2008 09:52:14 +0100 <thp@perli.net>
 Use xdg-open for files that we don't know the file type of
 
